Document JDK 25 build and optimized runtime